--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,11 @@
 /* styles.css */
 
 /* Add styles here to customize the appearance of your app */
+
+body{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
